# rchat

./: Cargo.toml
src/: dashboard.rs  main.rs  peer.rs  room.rs  signal.rs
static/: index.html
