[package]
name = "rchat"
version = "0.1.0"
edition = "2024"

[dependencies]
axum       = { version = "0.8.9", features = ["ws"] }
tokio      = { version = "1",   features = ["full"] }
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
uuid       = { version = "1.23.1",   features = ["v4"] }
dashmap    = "6.1.0"
futures-util = "0.3"
webrtc     = "0.17.1"
anyhow     = "1"
